Second commit fix

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 <body>
   <main class="main">
     <div class="card">
-      <img src="images\illustration-hero.svg" alt="hero section illustration">
+      <img src="images/illustration-hero.svg" alt="hero section illustration">
       <h1>Order Summary</h1>
       <p>You can now listen to millions of songs, audiobooks, and podcasts on any 
         device anywhere you like!</p>
       <div class="order">
-        <img src="images\icon-music.svg" alt="music icon">
+        <img src="images/icon-music.svg" alt="music icon">
         <div>
           <h2>Annual Plan</h2>
           <p>$59.99/year</p>
